@@ -10,7 +10,7 @@ use strict;
 use FindBin;
 use lib $FindBin::Bin;
 
-my @tests = glob "exe2_*.pl";
+my @tests = glob "t/parser/exe2_*.pl";
 
 use P6CTest tests => 2;
 
